--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pouchdb-quick-search",
-  "version": "1.3.0-fork",
+  "name": "pouchdb-quick-search4curltech",
+  "version": "1.3.0-curltech",
   "description": "PouchDB Quick Search - persisted full-text search for PouchDB",
   "main": "lib/index.js",
   "repository": {
